feat: add character image gallery and improve dark mode support
1. Add character image gallery with variants (Costumes, Head, Half-body, GIF) to character detail modal.
2. Add 'generate_image_index.py' to index image files and 'image_index.json'.
3. Fix dark mode readability issues in detail modals for Cities, Nations, and Characters.
4. Fix Rebel Alliance badge text color visibility.
5. Fix query loading state issue.

--- a/pages/query.html
+++ b/pages/query.html
@@ -589,6 +589,9 @@
             } catch (e) {
                 console.error('抽獎歷史查詢失敗:', e);
             }
+
+            // 所有查詢完成後，顯示已登入狀態（清除載入中訊息）
+            showLoggedInState(`玩家 ID: ${currentPlayerId}`, false);
         }
         
         // 解析背包資料
